fixed image alignments

--- a/index.css
+++ b/index.css
@@ -492,6 +492,7 @@ body {
 
 .panel-img-frame {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     
